# devino

./: .env.default  .gitignore  Makefile  README.md  devino.code-workspace  load_llm.sh  mkdocs.yml  project.sh  pyvenv.cfg  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
Phi-4-mini-instruct/: Makefile  pyproject.toml
Phi-4-mini-instruct/phi_4_mini_instruct/: inference.py  load.py
convert-phi4/: Makefile  pyproject.toml
convert-phi4/src/convert_phi4/: hello_query_device.py  load.py
load-models/: Makefile  pyproject.toml
model-server/: pyproject.toml
phi4-mini-instruct/: Makefile  pyproject.toml
phi4-mini-instruct/src/phi4_mini_instruct/: inference_onnxruntime.py  inference_openvino.py
phi4-onnx/: Makefile  pyproject.toml
phi4-onnx/src/phi4_onnx/: inference.py
playground/: README.md  download_model.py  gpu_devices.py
playground/.devcontainer/: setup.sh
playground/device/: estimate_operation_time.py  gpu_devices.py
playground/inference/: ms_phi4_text_generation.py  onnx.py  qwen2_onnx_text_generation.py  roberta_text_classification.py  transformer_text_classification.py  util.py
playground/model/: cache_dir.py  convert_direct_save.py  convert_text_classification_model.py  convert_text_generation_model.py  download_model.py
setup/: README.md  pyproject.toml  wsl-ubuntu22-setup.sh  wsl-ubuntu24-setup.sh
setup/src/setup/: bert_base_uncase.py  hello_query_device.py
