[tool.poetry]
name = "phi-4-mini-instruct"
version = "0.1.0"
description = ""
authors = ["coela-oss <to@coela.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
click = "^8.1.8"

openvino = "2024.0.0"
nncf = "^2.15.0"

transformers = "4.35.0"
optimum = {extras = ["nncf", "openvino"], version = "1.18.0"}

tensorflow = "2.15.0"
intel-extension-for-tensorflow = { version = "2.15.0.2", extras = ["xpu"] }
tf-keras = "2.15.0"

#openvino-genai = "2024.2.0"
torch = {path = "/home/vscode/pytorch/dist/torch-2.5.0a0+git32f585d-cp310-cp310-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
