[project]
name = "phi4-mini-instruct"
version = "0.1.0"
description = ""
authors = [
    {name = "coela-oss",email = "to@coela.org"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "torch[xpu] (>=2.6.0,<3.0.0)",
    "nncf (>=2.15.0,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "onnxruntime-openvino (>=1.20.0,<2.0.0)",
    "accelerator (>=2024.9.13,<2025.0.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "onnxsim (>=0.4.36,<0.5.0)",
    "openvino (==2024.6.0)",
    "onnxruntime-genai (>=0.6.0,<0.7.0)",
    "openvino-tokenizers (==2024.6.0.0)",
    "transformers (==4.48.3)",
    "openvino-genai (==2024.6.0.0)",
]


[tool.poetry]
packages = [{include = "phi4_onnx", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
