[project]
name = "setup"
version = "0.1.0"
description = ""
authors = [
    {name = "coela-oss",email = "to@coela.org"}
]
readme = "README.md"
requires-python = "3.10.16"
dependencies = [
    "openvino (>=2025.0.0,<2026.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "tensorflow (==2.15.0)",
    "intel-extension-for-tensorflow[xpu] (>=2.15.0.2,<3.0.0.0)",
    "mkl-static (>=2024.1.0,<2024.2.0)",
    "mkl-include (>=2024.1.0,<2024.2.0)",
]

[tool.poetry]
packages = [{include = "setup", from = "src"}]


[[tool.poetry.source]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-extension-xpu"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
priority = "explicit"


[tool.poetry.dependencies]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
